2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/Shipping_Order__c.object-meta.xml
<CustomObject>
    <label>Shipping Order</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>