2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/chkExport_Permit__c.field-meta.xml
<CustomField>
    <fullName>chkExport_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export Permit</label>
    <type>Checkbox</type>
</CustomField>