2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/chkPacking_List__c.field-meta.xml
<CustomField>
    <fullName>chkPacking_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packing List</label>
    <type>Checkbox</type>
</CustomField>