2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/chkPermit_Temp__c.field-meta.xml
<CustomField>
    <fullName>chkPermit_Temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permit Temp</label>
    <type>Checkbox</type>
</CustomField>