2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/chkShipping_Invoice__c.field-meta.xml
<CustomField>
    <fullName>chkShipping_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Invoice</label>
    <type>Checkbox</type>
</CustomField>