2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/chkShipping_Mark__c.field-meta.xml
<CustomField>
    <fullName>chkShipping_Mark__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Mark</label>
    <type>Checkbox</type>
</CustomField>