2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Consignee_Details__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Details__c</fullName>
    <label>Consignee Details</label>
    <type>TextArea</type>
</CustomField>