2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Crate_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Crate_Dimensions__c</fullName>
    <label>Crate Dimensions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Looseload (LCL)</fullName>
            </value>
            <value>
                <fullName>20&apos; Container</fullName>
            </value>
            <value>
                <fullName>40&apos; Container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>