2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <label>ETA</label>
    <type>DateTime</type>
</CustomField>