2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Exporter__c.field-meta.xml
<CustomField>
    <fullName>Exporter__c</fullName>
    <label>Exporter</label>
    <length>40</length>
    <type>Text</type>
</CustomField>