2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Goods_to_be_shipped_on_Cost__c.field-meta.xml
<CustomField>
    <fullName>Goods_to_be_shipped_on_Cost__c</fullName>
    <label>Goods to be shipped on (Cost)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>