2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <label>Gross Weight</label>
    <length>40</length>
    <type>Text</type>
</CustomField>