2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Job_Reference__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Reference</label>
    <referenceTo>Job_Reference__c</referenceTo>
    <relationshipLabel>Shipping Orders</relationshipLabel>
    <relationshipName>Shipping_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>