2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Mode_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Shipment__c</fullName>
    <label>Mode of Shipment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>