2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Packing_Pick_up_Address__c.field-meta.xml
<CustomField>
    <fullName>Packing_Pick_up_Address__c</fullName>
    <label>Packing/Pick-up Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>