2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Permit_Perm__c.field-meta.xml
<CustomField>
    <fullName>Permit_Perm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permit Perm</label>
    <type>Checkbox</type>
</CustomField>