2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Please_check_against_documents_attached__c.field-meta.xml
<CustomField>
    <fullName>Please_check_against_documents_attached__c</fullName>
    <label>Please check against documents attached</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Export Permit</fullName>
            </value>
            <value>
                <fullName>2. Shipping Invoice</fullName>
            </value>
            <value>
                <fullName>3. Packing List</fullName>
            </value>
            <value>
                <fullName>4. Shipping Mark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>