2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Please_declare_the_Permit_under__c.field-meta.xml
<CustomField>
    <fullName>Please_declare_the_Permit_under__c</fullName>
    <label>Please declare the Permit under</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>