2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <label>Ref No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>