2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By:</label>
    <length>40</length>
    <type>Text</type>
</CustomField>