2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Shipper_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipper_s_Name__c</fullName>
    <label>Shipper&apos;s Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>