2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Stuffing_Loading_Date__c.field-meta.xml
<CustomField>
    <fullName>Stuffing_Loading_Date__c</fullName>
    <label>Stuffing/Loading Date</label>
    <type>Date</type>
</CustomField>