2nd training/Community/Community/Community1/force-app/main/default/objects/Shipping_Order__c/fields/Vol_Wt__c.field-meta.xml
<CustomField>
    <fullName>Vol_Wt__c</fullName>
    <label>Vol. Wt.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>